# nsk-utility

./: .gitignore  README.md  package-lock.json  package.json
src/: common.js  index.html  main.js  notes.html  notes.js  popup.js  stopwatch.html  stopwatch.js  styles.css  titlebar.html  titlebar.js
src-tauri/: Cargo.toml  tauri.conf.json
